--- a/CSS/add_to_cart.css
+++ b/CSS/add_to_cart.css
@@ -462,8 +462,9 @@ th {
 }
 .secure-payment p {
   font-size: 18px;
-  font-weight: 700;
-  color: #6c6c6c;
+    font-weight: 700;
+    line-height: 20px;
+    color: #6c6c6c;
 }
 /* ---------------------------------------------------new */
 .product-color{
@@ -565,6 +566,15 @@ th {
     font-size: 21px;
     line-height: 56px;
     font-weight: 300;
+}
+.mobile-navbar{
+  display: none;
+}
+.cart{
+  display: none;
+}
+.fixed-div-section{
+  display: none;
 }
 
 /* ========================== Footer Section End ========================== */
