--- a/CSS/responsive_css/respo-payment.css
+++ b/CSS/responsive_css/respo-payment.css
@@ -1,5 +1,5 @@
-@media (min-width: 340px) and (max-width: 480px) {
 
+@media (min-width: 340px) and (max-width: 480px) {
      /*======================= Home section div Position Fixed ====================== */
   
   .icons{
@@ -38,10 +38,10 @@
     font-size: 34px;
   }
   .mobile-navbar {
-    margin-top: 1rem;
     display: flex;
     align-items: center;
     padding-inline: 4rem;
+    margin-top: 1rem;
   }
   .mobile-navbar h2 {
     margin-left: 4rem;
@@ -204,217 +204,112 @@
   }
   /* ================== drop Down 2 End =================================== */
   /* --------------- Navbar Menu For Mobile End -------------------------------------------- */
+/*  =========================== Payment Section Start ============================ */
 
-/* ============================== Section 2 Start Add Cart ============================ */
-
-.Adresses-save {
-    display: flex;
-    gap: 40px;
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  input[type="text"] {
-    padding: 6px 10px;
-    font-size: 10px;
-    border-radius: 24px;
-    width: 50%;
-    color: #436ae5;
-    font-weight: 800;
-    box-sizing: border-box;
-    border: 2px solid #6c6c6c;
-  }
-  .Adresses-save ::placeholder {
-    color: #436ae5;
-  }
-  .section-3 {
-    padding-inline: 12rem;
-    margin-top: 6rem;
-  }
-  .sectin3-heading h1 {
-    font-size: 5rem;
-    font-weight: 700;
-  }
-  .catehories-maindiv {
-    margin-top: 8px;
-    display: grid;
-    grid-template-columns: auto;
-    gap: 32px;
-  }
-  .img1-div {
-    position: relative;
-    display: flex;
-    gap: 1rem;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 1rem;
-    background-color: white;
-    flex-direction: row;
-  }
-  .img1-div img {
-    width: 40%;
-    height: 100%;
-  }
-  .shop-category-button {
-    position: absolute;
-    top: 0%;
-    text-align: start;
-    right: 0px;
-    background-color: black;
-    font-size: 30px;
+.apply-btn {
+    padding: 6px 6px;
+    background-color: #565656;
     color: white;
     font-weight: 700;
+    font-size: 12px;
     border: none;
-    padding: 3px 12px;
+    margin-left: 10px;
+    border-radius: 10px;
   }
-  .check-browscategory-button {
-    border: 2px solid black;
-    padding: 12px 32px;
-    font-size: 4rem;
-    font-weight: 600;
-    background-color: transparent;
+  .payment-form input {
+    border: 1px solid #b3b3b3;
+    padding: 6px 6px;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 5px;
   }
-  .browsallcategory {
-    margin-top: 12rem;
-    text-align: center;
+  .bank-imgages {
+    display: flex;
+    gap: 12px;
+    padding-top: 15px;
+    padding-left: 4px;
   }
-  
-  /* ============================== Heart Shape ================================= */
-  input[type="checkbox"] {
-    display: none;
+  .bank-imgages img {
+    height: 17px;
   }
-  
-  input[type="checkbox"] + label {
-    position: relative;
-    padding-left: 35px;
-    display: inline-block;
-    font-size: 16px;
+  .netbanking {
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 19px;
+    padding: 8px 8px;
+    color: #565656;
+    background-color: #eaeaea;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    margin-left: 4rem;
   }
-  
-  input[type="checkbox"] + label:before {
-    content: "\2665";
-    top: -11px;
-    left: -8px;
-    font-size: 30px;
-    border: 1px solid transparent;
-    padding: 10px;
-    border-radius: 3px;
-    color: white;
-    display: block;
-    position: absolute;
-    transition: 0.5s ease;
+  .cash-delivery {
+    padding: 8px 4px;
+    background-color: rgba(74, 144, 226, 0.21);
+    border: 1px solid #4a90e2;
+    width: fit-content;
+    padding-left: 0rem;
+    line-height: 18px;
   }
-  
-  input[type="checkbox"]:checked + label:before {
-    border: 1px solid transparent;
-    background-color: transparent;
-  }
-  
-  input[type="checkbox"]:checked + label:after {
-    content: "\2764";
-    font-size: 25px;
-    position: absolute;
-    top: -1px;
-    left: 0px;
-    color: red;
-    transition: 0.5s ease;
-  }
-  .heart-shape {
-    position: absolute;
-    left: 32%;
-    top: 2%;
-  }
-  /* ================================ heart Shape END ======================================= */
-  
-  .shoes-details {
-    font-weight: 600;
-    margin-top: 12px;
+  .payment-maindiv {
+    background-color: #ffffff;
+    line-height: 37px;
     word-spacing: 2px;
-    font-size: 8px;
-    line-height: 17px;
-  }
-  .checked {
-    color: orange;
-  }
-  .addtocart-btn {
-    border: none;
-    cursor: pointer;
-    color: white;
-    font-weight: 700;
-    margin-right: 16rem;
-    border-radius: 8px;
-    font-size: 20px;
-    background-color: #60b72a;
-    padding: 6px 32px;
-  }
-  .remove-btn {
-    border: none;
-    cursor: pointer;
-    color: white;
-    font-weight: 700;
-    margin-top: 1rem;
-    margin-right: 16rem;
-    border-radius: 8px;
-    font-size: 20px;
-    background-color: #2fa7c0;
-    padding: 6px 60px;
-  }
-  .Addtocart-remove {
-    text-align: center;
-    margin-top: 2rem;
-  }
-  .date-added {
-    font-size: 15px;
-    font-weight: 500;
-    margin-bottom: 4px;
-    word-spacing: 4px;
-  }
-  
-  .end-line {
-    width: auto;
-    font-size: 20px;
-    color: #8a8a8a;
-  }
-  .enline-div {
-    margin-top: 4rem;
-  }
-  
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td,
-  th {
-    text-align: left;
-    font-weight: 500;
-    padding: 12px;
-    border-style: none;
-  }
-  .main-div {
-    gap: 2rem;
-    display: flex;
-    flex-direction: column;
-  }
-  .add-cart-div {
-    flex: 1;
-  }
-  .price-details-div {
-    width: -webkit-fill-available;
-    line-height: 43px;
+    padding-bottom: 2rem;
+    font-size: inherit;
+    padding-top: 28px;
+    padding-inline: 14px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
       inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    /* margin: auto; */
-    background-color: white;
-    padding: 12px 12px;
   }
-  .section-1 {
+  .payment-section {
     padding-inline: 1rem;
     margin-top: 3rem;
   }
+  input[type="radio" i] {
+    margin-left: 20px;
+    accent-color: #4a90e2;
+    width: 15px;
+    height: 15px;
+  }
+  /* --------------------------------new */
+.payment-h1tag {
+    font-weight: 700;
+    color: #ea4335;
+    font-size: 15px;
+    line-height: 19px;
+  }
+  .payment-h3tag {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .apply-btn-div1 {
+    display: flex;
+    padding-left: 1rem;
+  }
+  .h2-anotherpayment {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .rbi-guidelines {
+    color: #9a9797;
+    font-size: 13px;
+    padding-left: 1rem;
+    line-height: normal;
+    font-weight: 600;
+  }
+  .cashon-delivery {
+    color: #9a9797;
+    font-size: 12px;
+    font-weight: 600;
+    padding-left: 1rem;
+  }
+  
+  /* --------------------------------- end */
+  
+  /* ========================== Payment Section End =================================== */
+  
   .place-order-div {
     margin-top: 6px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
@@ -427,60 +322,17 @@
   .place-order-btn {
     float: right;
     padding: 10px;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 700;
     color: white;
     border-radius: 24px;
     border: none;
     background-color: #f04747;
   }
-  .secure-payment {
-    display: flex;
-    gap: 1rem;
-    margin-left: 1rem;
-    margin-top: 2rem;
-  }
-  .secure-payment p {
-    font-size: 13px;
-    font-weight: 700;
-    line-height: 18px;
-    color: #6c6c6c;
-  }
-  .product-color{
-    color: #6C6C6C;
-    font-size: 12px
-  }
-  .span-strike{
-    display: inline-flex;
-    color: #6C6C6C;
-  }
-  .product-price{
-    color: #11575C;
-    font-size: 15px;
-  }
-  .discount-per{
-    font-size: 13px;
-     color: #34A853;
-  }
-  .save-for-later{
-    display: inline-flex; 
-    gap: 30px;
-     margin-top: 1rem;
-  
-  }
-  .Adresses-save h2{
+  /* ==================== Footer Section ===================================== */
+  .fa {
+    padding: 8px;
     font-size: 12px;
-  }
-  /* ----------------------------------------------------end */
-  
-  
-  /* ================== Shop By Category END ============================== */
-  
-  /* ============================== Section 2 Start Add Cart End ========================== */
-   /* ==================== Footer Section ===================================== */
-   .fa {
-    padding: 4px;
-    font-size: 11px;
     width: 4px;
     height: 4px;
     text-align: center;
