--- a/index-responsive.css
+++ b/index-responsive.css
@@ -1,5 +1,5 @@
 @media (min-width: 340px) and (max-width: 480px) {
-
+  @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
   /*======================= Home section div Position Fixed ====================== */
   
   .icons{
