--- a/CSS/add_to_cart.css
+++ b/CSS/add_to_cart.css
@@ -621,4 +621,21 @@ font-size: 12px;
 .img1-div{
   gap: 1rem;
 }
+.heart-shape {
+  position: absolute;
+  left: 41%;
+  top: 1%;
+}
+input[type="checkbox"] + label:before{
+  content: "\2661";
+}
+input[type="checkbox"]:checked + label:after {
+  content: "\2764";
+  font-size: 30px;
+  position: absolute;
+  top: 6px;
+  left: 3px;
+  color: red;
+  transition: 0.5s ease;
+}
 }
