--- a/CSS/responsive_css/respo-payment.css
+++ b/CSS/responsive_css/respo-payment.css
@@ -330,75 +330,10 @@
     background-color: #f04747;
   }
   /* ==================== Footer Section ===================================== */
-  .fa {
-    padding: 8px;
-    font-size: 12px;
-    width: 4px;
-    height: 4px;
-    text-align: center;
-    text-decoration: none;
-  }
-
-  .fa:hover {
-    opacity: 0.7;
-  }
-  .social-media-icon .fa-facebook {
-    background: white;
-    border-radius: 15px;
-    color: #11575c;
-  }
-  .social-media-icon .fa-instagram {
-    background: white;
-    border-radius: 15px;
-    color: #11575c;
-  }
-  .social-media-icon .fa-twitter {
-    background: white;
-    border-radius: 15px;
-    color: #11575c;
-  }
-  .social-media-icon .fa-linkedin {
-    background: white;
-    border-radius: 15px;
-    color: #11575c;
-  }
-  .links-About {
-    display: flex;
-    flex-direction: column;
-  }
+  
   .footer-main-div {
-    display: grid;
-    padding-bottom: 10rem;
-    grid-template-columns: auto;
-    gap: 10px;
-    background-color: #11575c;
-    margin-inline: 0px;
-    padding: 10px 20px;
-    margin-top: 6rem;
+    display: none;
+    
   }
-  .social-media-icon h2 {
-    color: #d9d9d9;
-    font-size: 2rem;
-    font-weight: 900;
-  }
-  .social-media-icon p {
-    color: white;
-    font-size: 14px;
-    font-weight: 400;
-    margin-top: 20px;
-  }
-
-  .company h2 {
-    font-size: 22px;
-    font-weight: 600;
-    color: #d9d9d9;
-    line-height: 20px;
-  }
-  .links-About a {
-    color: white;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 300;
-  }
-
+  
 }
