--- a/CSS/responsive_css/respo-payment.css
+++ b/CSS/responsive_css/respo-payment.css
@@ -316,6 +316,7 @@
       inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     background-color: white;
+    margin-bottom: 6rem;
     padding: 8px 18px;
     direction: rtl;
   }
