--- a/CSS/responsive_css/respo-signup.css
+++ b/CSS/responsive_css/respo-signup.css
@@ -1,7 +1,9 @@
 @media (min-width: 340px) and (max-width: 480px) {
 
     input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"]
+ {
   width: 100%;
   padding: 12px 8px;
   font-size: 15px;
@@ -12,7 +14,8 @@ input[type="password"] {
   box-sizing: border-box;
 }
 input[type="text"]:hover,
-input[type="password"]:hover {
+input[type="password"]:hover,
+input[type="email"]:hover {
   
   border: 3px solid #22a1a9;
  
