--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -10,7 +10,9 @@ body {
   background-size: cover;
 }
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"]
+ {
   width: 100%;
   padding: 12px 20px;
   font-size: 18px;
@@ -21,7 +23,8 @@ input[type="password"] {
   box-sizing: border-box;
 }
 input[type="text"]:hover,
-input[type="password"]:hover {
+input[type="password"]:hover,
+input[type="email"]:hover{
   
   border: 3px solid #22a1a9;
  
